[package]
name = "read_pipe"
description = "Simple utility to read console pipes."
repository = "https://github.com/LyonSyonII/read_pipe"
keywords = ["pipe", "read", "console", "linux", "stdin"]
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Liam G <liam.garriga@tutanota.com>"]

[dependencies]
atty = "0.2.14"